# gpt-train

./: .gitignore  README.md  gpt2.py  hellaswag.py  pyproject.toml  requirements.txt  tests.py  train.py  train_gpt2.py
nb/: play.ipynb
